# template-ai-micro-service

./: .env.example  Dockerfile  README.md  docker-compose.ai-service.yaml  main.py  pyproject.toml  requirements.txt
app/: main.py
app/api/: __init__.py
app/api/routers/: process_router.py
app/common/: __init__.py  wrappers.py
app/common/utils/: utils.py
app/core/: config.py  setup_lifspan.py
app/pipelines/: process_pipline.py
app/schemas/: __init__.py  process_schema.py
docs/: CODE_OF_CONDUCT.md
docs/assets/: Dockerfile
