[project]
name = "template-ai-service"
version = "0.1.0"
description = "This template is for building an AI service following micro-service architecture"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "colorlog==6.9.0",
    "fastapi==0.115.6",
    "pydantic-settings==2.7.1",
    "pydantic==2.10.5",
    "uvicorn==0.34.0",
    "langchain>=0.3.15",
    "langchain-google-genai>=2.0.9",
]
